[FTH-89] make scrollbars skinnier and fix card padding

--- a/footiehub/src/app/globals.css
+++ b/footiehub/src/app/globals.css
@@ -30,3 +30,13 @@ body {
   color: var(--foreground);
   background: var(--background);
 }
+
+
+/*for scrollbar design: https://dev.to/luckey/stylizing-the-scrollbar-in-nextjs-1o99*/
+* {
+  scrollbar-width: thin;
+}
+
+/* *::-webkit-scrollbar {
+  width: 17px;
+} */
